@@ -59,6 +59,14 @@ Xu          , Xu          , Qxu         , Qxu         , Ql          , Ql        
             max_hitpoints=90
             experience=99
             alignment=liminal
+            [modifications]
+                [object]
+                    [effect]
+                        apply_to=image_mod
+                        add="BLEND(255,0,255,25%)"
+                    [/effect]
+                [/object]
+            [/modifications]
         [/leader]
         side=1
         controller=human
